# agents-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/agents-sites/: package-lock.json  package.json
apps/customer-dashboard/: .gitignore  middleware.ts  package-lock.json  package.json  tailwind.config.ts
apps/customer-dashboard/__tests__/: middleware.test.ts
apps/dashboard/: middleware.ts  package-lock.json  package.json  vercel.json
apps/workers/builder_stub/: main.py  test_builder_stub.py
apps/workers/scraping_stub/: main.py  test_scraping_stub.py
apps/workers/scraping_worker/: main.py  overpass_client.py  phone_normalizer.py  query_builder.py  scheduler.py
apps/workers/setting_agent/: claude_client.py  compliance.py  elevenlabs_client.py  lead_picker.py  main.py  sales_analyzer.py  stripe_client.py  transcript_analyzer.py  twilio_sms.py
apps/workers/setting_stub/: main.py  test_setting_stub.py
apps/workers/website_builder/: claude_client.py  copy_generator.py  main.py  slug_generator.py  target_analyzer.py
docs/superpowers/plans/: 2026-04-09-web-scraping-agent.md  2026-05-01-customer-dashboard-e1.md  2026-05-02-stripe-payments-and-sales-call.md
docs/superpowers/specs/: 2026-04-09-web-scraping-agent-design.md  (+5 more)
supabase/: seed.sql
supabase/migrations/: 001_initial_schema.sql  003_scraping_targets.sql  004_sites.sql  005_site_submissions.sql  006_call_logs.sql  007_customer_onboarding.sql  008_payment_flow.sql
tests/integration/: test_full_pipeline.py
(+90 files in other folders)
