[project]
name = "agents-platform"
version = "0.1.0"
description = "Multi-agent orchestrator platform with 3 AI agents"
requires-python = ">=3.12"
dependencies = [
    "supabase>=2.0.0",
    "pydantic>=2.0.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps/workers", "tests"]
